core/testing/snapshots/types/array.snap
### TITLE ###
Can use vars in arrays
### INPUT ###
a = "a"
b = 1
c = true
print([a, b, c])
### STDOUT ###
[ "a", 1, true ]

### TITLE ###
General array operations
### INPUT ###
a = [1, 2, 3]
print(a)
print(join(a, "-"))
print(a + ["4"])
print(a + ["4"])
b = ["a", 3, false, 5.5]
print(b)
print(join(b, "-"))
print(b + ["yo"])
### STDOUT ###
[ 1, 2, 3 ]
1-2-3
[ 1, 2, 3, "4" ]
[ 1, 2, 3, "4" ]
[ "a", 3, false, 5.5 ]
a-3-false-5.5
[ "a", 3, false, 5.5, "yo" ]

### TITLE ###
Nested arrays
### INPUT ###
a = [1, [2, 3], 4]
for b in a:
	print(b)
### STDOUT ###
1
[ 2, 3 ]
4

### TITLE ###
Varpath parenthesized
### SKIP ###
TODO varpath requires identifier but below is parenthesized func, needs TS  work
### INPUT ###
a = [1, [2, [3, ["four"]], 5]]
print((a[1])[0]) // 2
print((a[1][1])[0]) // 3
### STDOUT ###
2
3
### TITLE ###
Deep nesting
### INPUT ###
a = [1, [2, [3, ["four"]], 5]]
print(a[0]) // 1
print(a[1]) // [2, [3, [four]], 5]
print(a[1][1]) // [3, [four]]
print(a[1][1][1]) // [four]
print(a[1][1][1][0]) // four
print(a[1][2]) // 5
### STDOUT ###
1
[ 2, [ 3, [ "four" ] ], 5 ]
[ 3, [ "four" ] ]
[ "four" ]
four
5

### TITLE ###
Can modify array
### INPUT ###
a = [1, [2, 3], 4]
a += [5.1, "six"]
print(a)
### STDOUT ###
[ 1, [ 2, 3 ], 4, 5.1, "six" ]

### TITLE ###
Concat does not modify in place
### INPUT ###
a = [1, 2, 3]
b = a + [4]
print(a)
print(b)
### STDOUT ###
[ 1, 2, 3 ]
[ 1, 2, 3, 4 ]

### TITLE ###
Entry assignment
### INPUT ###
a = [1, 2, "three"]
a[0] = 5
a[1] = false
print(a)
### STDOUT ###
[ 5, false, "three" ]

### TITLE ###
Entry compound assignment
### INPUT ###
a = [100, 200, 300, 400]
a[0] += 20
a[1] -= 20
a[2] *= 2
a[3] /= 2
print(a)
### STDOUT ###
[ 120, 180, 600, 200 ]

### TITLE ###
Entry assignment out of bounds
### INPUT ###
a = [100, 200, 300, 400]
a[4] = 500
### STDERR ###
error[RAD20029]: Index out of bounds: 4 (length 4)
  --> <script>:2:3
  |
1 | a = [100, 200, 300, 400]
2 | a[4] = 500
  |   ^
  |
   = info: rad explain RAD20029


### EXIT ###
1
### TITLE ###
Positive indexing
### INPUT ###
a = [100, 200, 300, 400]
print(a[0])
print(a[1])
### STDOUT ###
100
200

### TITLE ###
Negative indexing
### INPUT ###
a = [100, 200, 300, 400]
print(a[-1])
print(a[-2])
### STDOUT ###
400
300

### TITLE ###
Negative index assignment
### INPUT ###
a = [100, 200, 300, 400]
a[-1] = 5
a[-2] = 4
print(a)
### STDOUT ###
[ 100, 200, 4, 5 ]

### TITLE ###
Too negative indexing gives error
### INPUT ###
a = [100, 200, 300, 400]
print(a[-99])
### STDERR ###
error[RAD20029]: Index out of bounds: -99 (length 4)
  --> <script>:2:9
  |
1 | a = [100, 200, 300, 400]
2 | print(a[-99])
  |         ^^^
  |
   = info: rad explain RAD20029


### EXIT ###
1
### TITLE ###
Too negative index assignment gives error
### INPUT ###
a = [100, 200, 300, 400]
a[-99] = 5
### STDERR ###
error[RAD20029]: Index out of bounds: -99 (length 4)
  --> <script>:2:3
  |
1 | a = [100, 200, 300, 400]
2 | a[-99] = 5
  |   ^^^
  |
   = info: rad explain RAD20029


### EXIT ###
1
